--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
+ 
+@import url('https://fonts.googleapis.com/css2?family=Source+Serif+4:ital,opsz,wght@0,8..60,200..900;1,8..60,200..900&display=swap');
+ 
 .swiper {
 
   @apply  md:w-[calc(100%+30px)] h-full w-full rounded-2xl md:absolute overflow-x-hidden;
@@ -15,9 +18,9 @@
   font-size: 22px;
   font-weight: bold;
   color: #fff;
-
 }
  
 body {
   background-color: #f1f8fe;
+  /* color: #f1f8fe77; */
 }
